fix shifting

--- a/media/static/styles/questions.css
+++ b/media/static/styles/questions.css
@@ -526,9 +526,9 @@ div.trustScaleLabel > div{
 #clear{
   position:absolute;
   top: -8px;
-  left: 0px;
-  width: 19px;
-  height: 19px;
+  left: 3px;
+  /* width: 19px;
+  height: 19px; */
   font-size: 20px;
   color: #000000;
   z-index: 2;
@@ -662,9 +662,9 @@ div.trustScaleLabel > div{
 #weatherClear{
   position:absolute;
   top: -8px;
-  left: -1px;
-  width: 19px;
-  height: 19px;
+  left: 3px;
+  /* width: 19px;
+  height: 19px; */
   font-size: 20px;
   color: #000000;
   z-index: 2;
